<resources>
    <string name="app_name">Swallow Server</string>
    <string name="action_settings">Settings</string>
    <string name="def_addr_ios">ftp://ftp:ftp@000.000.000.000:2121</string>
    <string name="def_addr_reg">ftp://000.000.000.000:2121</string>

    <string name="dialog_message">This app requires permisssion to write data to external storage to store the credentials of your <b>FTP File Server</b>. Please grant the same after clicking OK.</string>
    <string name="dialog_title">Permission Required</string>
    <string name="dialog_message_exit">Sorry, the app can\'t run without this permission.</string>
    <string name="dialog_message_error">Please provide access to external storage.</string>

    <string name="passwordShow">Show Password: </string>
    <string name="pathHomeExt">/storage/emulated/0/</string>
    <string name="subLocation">Folder Name</string>
    <string name="serverPrompt">The server is running at</string>
    <string name="sysApple">For Apple Devices: </string>
    <string name="sysOthers">For Other Devices: </string>
    <string name="hintUser">Username</string>
    <string name="hintPassword">Password</string>
    <string name="defaultSetting">ftp</string>
    <string name="ImgPower">Power Button</string>
    <string name="ImgHeader">File Transfer Protocol</string>

    <string name="dialog_wifi_title">Wi-Fi OR Hotspot Required</string>
    <string name="dialog_wifi_message">Please turn on the mobile hotspot or connect to a Wi-Fi network to share your files</string>

</resources>
